fix: update user, add: delete user by id
