# docs/swagger.yaml
@@ -1,4 +1,9 @@
 definitions:
+  controllers.DeleteReponse:
+    properties:
+      message:
+        type: string
+    type: object
   controllers.EmailResponse:
     properties:
       email:
@@ -51,10 +56,33 @@ definitions:
 info:
   contact: {}
 paths:
+  /api/v1/DeleteUser/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a user given their ID
+      parameters:
+      - description: ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controllers.DeleteReponse'
+      security:
+      - BearerAuth: []
+      tags:
+      - User
   /api/v1/GetCurrentUser:
     get:
       consumes:
       - application/json
+      description: Get current user by ID
       produces:
       - application/json
       responses:
@@ -65,15 +93,22 @@ paths:
       security:
       - BearerAuth: []
       tags:
-      - GetCurrentUser
-  /api/v1/UpdateUser:
+      - User
+  /api/v1/UpdateUser/{id}:
     put:
       consumes:
       - application/json
+      description: Update a user's email
       parameters:
-      - description: UserRequest
+      - description: ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: User data
         in: body
-        name: request
+        name: user
+        required: true
         schema:
           $ref: '#/definitions/controllers.UserRequest'
       produces:
@@ -86,13 +121,13 @@ paths:
       security:
       - BearerAuth: []
       tags:
-      - UpdateUser
+      - User
   /login:
     post:
       consumes:
       - application/json
       parameters:
-      - description: LoginRequest
+      - description: Login Request
         in: body
         name: request
         schema:
@@ -105,13 +140,13 @@ paths:
           schema:
             $ref: '#/definitions/controllers.LoginResponse'
       tags:
-      - Login
+      - Auth
   /register:
     post:
       consumes:
       - application/json
       parameters:
-      - description: RegisterRequest
+      - description: Register Request
         in: body
         name: request
         schema:
@@ -124,7 +159,7 @@ paths:
           schema:
             $ref: '#/definitions/controllers.RegisterResponse'
       tags:
-      - Register
+      - Auth
 securityDefinitions:
   BearerAuth:
     in: header
